2024-07-22 Se agrega compatibilidad para otras plantas.

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -379,6 +379,7 @@
     <Compile Include="Controllers\RM_cabeceraController.cs" />
     <Compile Include="Controllers\RolesAdminController.cs" />
     <Compile Include="Controllers\RU_registrosController.cs" />
+    <Compile Include="Controllers\RU_rel_usuarios_plantaController.cs" />
     <Compile Include="Controllers\upgrade_revisionController.cs" />
     <Compile Include="Controllers\UserAdminController.cs" />
     <Compile Include="Controllers\UtilidadesController.cs" />
@@ -938,7 +939,13 @@
     <Compile Include="Models\RM_transporte_proveedor.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RU_accesos.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\RU_registros.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\RU_rel_usuarios_planta.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\RU_usuarios_embarques.cs">
@@ -5356,6 +5363,11 @@
     <Content Include="Views\IT_reporte_usuarios\ExportUsers.cshtml" />
     <Content Include="Views\ReportePesadas\Index.cshtml" />
     <Content Include="Views\Utilidades\vcard.cshtml" />
+    <Content Include="Views\RU_rel_usuarios_planta\Create.cshtml" />
+    <Content Include="Views\RU_rel_usuarios_planta\Delete.cshtml" />
+    <Content Include="Views\RU_rel_usuarios_planta\Details.cshtml" />
+    <Content Include="Views\RU_rel_usuarios_planta\Edit.cshtml" />
+    <Content Include="Views\RU_rel_usuarios_planta\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
